Bug 101971 - FILEOPEN - Impress crash (Flash elements)
Summary: FILEOPEN - Impress crash (Flash elements)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.1.1.3 release
Hardware: x86-64 (AMD64) Windows (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3 target:5.1.6
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2016-09-07 18:52 UTC by FlamingJoe
Modified: 2017-07-10 15:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["Flash.ocx"]


Attachments
Example powerpoint (3.03 MB, application/x-ole-storage)
2016-09-09 18:19 UTC, FlamingJoe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FlamingJoe 2016-09-07 18:52:53 UTC
CRASH when FILEOPEN 
When trying to open "Boardworks" educational powerpoint files, Libreoffice crashes. The files are Microsoft PowerPoint 97-2003 Presentation (.ppt) and contain interactive Flash elements.
Comment 1 Julien Nabet 2016-09-09 18:08:31 UTC
Would it be possible you attach an example file (or give a link)?
Also, you may try last stable LO version 5.1.5 or 5.2.1 ?
Comment 2 FlamingJoe 2016-09-09 18:19:50 UTC
Created attachment 127235 [details]
Example powerpoint

Here's an example powerpoint file, as requested, although I believe it is under copyright, and as such for research purposes only
Comment 3 Julien Nabet 2016-09-09 18:31:10 UTC
Thank you for your feedback.

On pc Debian x86-64 with master sources updated today, I don't reproduce the crash

Could you try with a newer LO version?
Comment 4 FlamingJoe 2016-09-11 12:16:16 UTC
Installed the latest LO, and still get the crash :(
crashreport.libreoffice.org/stats/crash_details/cdce6c29-ff7e-4568-920f-6759aa0806dd
Comment 5 Julien Nabet 2016-09-13 18:48:30 UTC
Thank you for your feedback.
Let's put this one to NEW since there's a bt.
Comment 6 Julien Nabet 2016-09-13 18:49:16 UTC
Increase importance since it's a crash.
Comment 7 Caolán McNamara 2016-09-22 11:41:54 UTC
Don't know what we can do about this seeing as the crash is in flash.ocx we call OleLoad in embeddedobj/source/msole/olecomponent.cxx:733 and it crashes in the depths of flash.ocx afterwards
Comment 8 Julien Nabet 2016-09-22 13:49:18 UTC
(In reply to Caolán McNamara from comment #7)
> Don't know what we can do about this seeing as the crash is in flash.ocx we
> call OleLoad in embeddedobj/source/msole/olecomponent.cxx:733 and it crashes
> in the depths of flash.ocx afterwards

Would putting OleLoad in a try/catch help as a bandaid?
Comment 9 Caolán McNamara 2016-09-22 20:09:02 UTC
Not an ordinary try/except anyway. I see we do have precedent of using __try/__except already. Maybe this is sufficiently miserable already that we could try that.
Comment 10 Caolán McNamara 2016-09-22 20:16:03 UTC
https://gerrit.libreoffice.org/#/c/29199/ does indeed work to allow this document to load under windows 10 (32bit)
Comment 11 Commit Notification 2016-09-23 07:39:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=373b44a2fcbe78e8a3ff14cd410826af151a6adf

Resolves: tdf#101971 OleLoad under structured exception guards

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2016-09-23 09:07:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a3218c2737fb3d78989e470991b1c712fc3a4275&h=libreoffice-5-2

Resolves: tdf#101971 OleLoad under structured exception guards

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2016-09-23 10:02:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dafcb32f09c3acea8e2fa12e1d39261b13c740db&h=libreoffice-5-1

Resolves: tdf#101971 OleLoad under structured exception guards

It will be available in 5.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.