Resolves: tdf#101971 OleLoad under structured exception guards

sample pptx crashes down in the depths of (apparently pre-installed on
32bit Windows 10) Flash.ocx

Change-Id: I4e083d492e56e72df47b2c172d7f07f0e39b82ea
Reviewed-on: https://gerrit.libreoffice.org/29199
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
Tested-by: Stephan Bergmann <sbergman@redhat.com>
(cherry picked from commit 373b44a2fcbe78e8a3ff14cd410826af151a6adf)